[project]
name = "artcrm-followup-agent"
version = "0.1.0"
requires-python = ">=3.11"
description = "Followup agent that reads inbox replies, classifies them, and queues follow-ups for overdue contacts."
dependencies = [
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artcrm_followup_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
